[package]
name = "nbmarch"
version = "0.1.0"
authors = ["Ryan <rnleach@users.noreply.github.com>"]
description = "A library for retrieving NBM 1D text files and cacheing them locally."
publish = false

edition = "2018"

[profile.release]
lto = "fat"

[dependencies]
chrono = "^0.4"
csv = "^1.1.0"
dirs = "^3.0.1"
filedb = {version="=0.1.1", git="https://github.com/rnleach/filedb.git", tag="v0.1.1"}
nbm-tools = {version="=0.1.1", git="https://github.com/rnleach/nbm-tools.git", tag="v0.1.1"}
optional = "^0.5.0"
reqwest = {version = "^0.11.0", features=["blocking"]}
rusqlite = "^0.24"

[dev-dependencies]
tempfile = "^3.2.0"
